# 9ph

./: .gitmodules  NineP.cabal  stack.yaml
src/Data/: NineP.hs
src/Data/NineP/: Bindings.hsc  MessageTypes.hs  OpenMode.hs  QType.hs  Qid.hs  Stat.hs  generate_bindings.sh  generate_message_types.sh
test/: Spec.hs
test/NineP/: Tests.hs
