name:		NineP
version:	0.0.3.1
license:	BSD3
license-file:	LICENSE
author:		Joe M
maintainer:	Joe M <joe9mail@gmail.com>
stability:	Experimental
homepage:	https://github.com/joe9/9ph
synopsis:	9P2000 in pure Haskell
category:	Data
description:	Pure Haskell implementation of the 9P2000 protocol from the
                Plan 9 and Inferno operating systems.  Many implementations of
                9P2000 exist including the Linux kernel v9fs module, wmii
                (X window manager).  More information on 9P and implementations
                may be found at http:\/\/9p.cat-v.org
build-type:	Simple
cabal-version:	>= 1.10
Tested-With:    GHC == 8.0.1

source-repository head
    type:       git
    location:   https://github.com/joe9/9ph/

source-repository this
    type:       git
    location:   https://github.com/joe9/9ph/
    tag:        0.0.2.1

flag bytestring-in-base

library
    build-depends: base
                 , bitmask
                 , binary
                 , bytestring
                 , text
                 , protolude
                 , bitmask
                 , cereal
                 , string-conversions
                 , QuickCheck
                 , text-generic-pretty
    hs-source-dirs:   src
    exposed-modules:  Data.NineP
                    , Data.NineP.MessageTypes
                    , Data.NineP.Qid
                    , Data.NineP.Stat
                    , Data.NineP.OpenMode
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
    other-extensions: PatternSynonyms
    ghc-options:      -Wall
    default-language: Haskell2010

test-suite NineP-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       NineP.Tests
  build-tools:       hsc2hs
  build-depends:       base
                     , bitmask
                     , binary
                     , bytestring
                     , text
                     , protolude
                     , cereal
                     , string-conversions
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck
                     , NineP
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-extensions: NoImplicitPrelude
                  , OverloadedStrings
  default-language:    Haskell2010
